# fapilog

./: .buildinfo  .codecov.yml  .commitlintrc.yaml  .env.test  .gitignore  .issue_120.json  .issue_122.json  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .weak-assertion-baseline.txt  CHANGELOG.md  CLAUDE.md  CODE_COVERAGE_REPORT.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_AUDIT_REPORT.md  INFRASTRUCTURE_SETUP.html  README.html  README.md  RELEASING.md  SECURITY.md  TODO.md  appendices.html  architecture.html  cliff.toml  comparisons.html  conftest.py  constraints.txt  contributing.html  coverage.json  documentation-guide-for-contributors.html  documentation-review-report.html  documentation-structure.html  enterprise.html  env-vars.html  faq.html  features.html  genindex.html  (+24 more)
.claude/: settings.json
.doctrees/: INFRASTRUCTURE_SETUP.doctree  README.doctree  appendices.doctree  architecture.doctree  comparisons.doctree  contributing.doctree  documentation-guide-for-contributors.doctree  documentation-review-report.doctree  documentation-structure.doctree  enterprise.doctree  env-vars.doctree  environment.pickle  faq.doctree  features.doctree  index.doctree  install-and-update.doctree  milestones.doctree  patterns.doctree  plugin-guide.doctree  prd.doctree  quality-signals.doctree  redaction-guarantees.doctree  release-notes.doctree  schema-guide.doctree  schema-migration-v1.0-to-v1.1.doctree  security-operator-workflows.doctree  settings-guide.doctree  style-guide.doctree  v2-excellence-preservation.doctree  v3-migration-plan.doctree  why-fapilog.doctree
_sources/: appendices.md.txt  documentation-review-report.md.txt  env-vars.md.txt  features.md.txt  index.md.txt  patterns.md.txt  plugin-guide.md.txt  prd.md.txt  redaction-guarantees.md.txt  schema-guide.md.txt  settings-guide.md.txt  why-fapilog.md.txt
_static/: documentation_options.js
addons/: tamper-evident-logging.html
adr/: 0003-canonical-log-schema-v1.1.html  0004-encryption-out-of-scope.html
api-reference/: audit-trail.html  builder.html  configuration-map.html  configuration.html  context-binding.html  index.html  lifecycle-results.html  logger-methods.html  modules.html  modules.md  top-level-functions.html  types.html
architecture/: built-in-core-features.html  checklist-results-report.html  coding-standards.html  components.html  core-workflows.html  data-models.html  database-schema.html  developer-friendly-error-experience.html  error-handling-strategy.html  external-apis.html  high-level-architecture.html  index.html  infrastructure-and-deployment.html  introduction.html  next-steps.html  plugin-error-isolation.html  rest-api-spec.html  security.html  source-tree.html  tech-stack.html  test-strategy-and-standards.html
audit_logs/: audit_2025-08-07.jsonl
audits/: CODE_COVERAGE_REPORT.html  fapilog-assessment-2026-01-16 (Claude-Opus-4.5).html  fapilog-assessment-2026-01-16 (GPT-5.2).html  fapilog-assessment-2026-01-16 (Gemini-3-Flash).html  fapilog-assessment-2026-01-16 (Grok).html  fapilog-assessment-2026-01-19 (Claude-Opus-4.5).html  fapilog-assessment-2026-01-19 (GPT-5.2).html  fapilog-assessment-2026-01-19 (Gemini-3-Flash).html
contributing/: changelog.html  contract-tests.html  index.html  test-categories.html
cookbook/: adaptive-sampling-high-volume.html  compliance-redaction.html  custom-log-levels.html  dev-prod-logging-config.html  django-structured-logging.html  exception-logging-request-context.html  fastapi-json-logging.html  fastapi-microservice-production.html  fastapi-request-id-logging.html  graceful-shutdown-flush.html  index.html  log-sampling-rate-limiting.html  non-blocking-async-logging.html  redacting-secrets-pii.html  safe-request-response-logging.html  skip-noisy-endpoints.html
core-concepts/: batching-backpressure.html  context-binding.html  diagnostics-resilience.html  envelope.html  index.html  metrics.html  pipeline-architecture.html  redaction.html  sinks.html
docs/: LIBRARY_ASSESSMENT_REPORT.md  README.md  appendices.md  architecture.md  ci-configuration.md  comparisons.md  conf.py  contributing.md  documentation-guide-for-contributors.md  documentation-review-report.md  enterprise.md  env-vars.md  faq.md  features.md  glossary.md  index.md  install-and-update.md  milestones.md  patterns.md  plugin-guide.md  prd.md  redaction-guarantees.md  release-notes.md  requirements.txt  roadmap.md  schema-guide.md  schema-migration-v1.0-to-v1.1.md  security-operator-workflows.md  settings-guide.md  test_api.py  validate_links.py  why-fapilog.md
enterprise/: audit-sink.html  tamper-enterprise-key-management.html
examples/: basic_usage.py  builder-configurations.html  cli-tools.html  fastapi-logging.html  index.html  kubernetes-file-sink.html  prometheus-metrics.html  redacting-secrets.html  sampling-debug-logs.html  size-limited-destinations.html  structured-error-logging.html
getting-started/: hello-world.html  index.html  installation.html  quickstart.html
guides/: async-context.html  fastapi-builder-migration.html  migration-file-rotation.html  settings-to-builder-migration.html  tenacity-integration.html  testing.html
integrations/: fastapi.html
jsonschema/: log_envelope_v1.json
patterns/: http-sinks.html  property-based-tests.html  sdk-sinks.html
plugin-development/: index.html  quickstart.html
plugins/: authoring.html  configuration.html  contracts-and-versioning.html  enrichers.html  error-handling.html  filters.html  health-checks.html  index.html  processors.html  quickstart.html  redactors.html  sinks.html  testing.html
prd/: checklist-results-report.html  epic-1-foundation-core-architecture.html  epic-2-performance-revolution.html  epic-3-plugin-ecosystem-foundation.html  epic-4-enterprise-compliance-observability.html  epic-5-developer-experience-documentation.html  epic-6-testing-quality-assurance.html  epic-7-community-ecosystem-growth.html  epic-8-production-excellence.html  epic-9-fastapi-integration-layer.html  epic-list.html  goals-and-background-context.html  index.html  next-steps.html  (+3 more)
(+1098 files in other folders)
